clean up, basket bar

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Pizza order</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kodchasan:wght@500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
