--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 </body>
+<script src="/path/to/jquery.js"></script> 
 <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
 <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
