--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
     -->
 </body>
 <script src="/path/to/jquery.js"></script> 
+<script src="js/scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script>
+
 <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
 
 <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
